--- a/app/src/main/res/layout/item_course_list.xml
+++ b/app/src/main/res/layout/item_course_list.xml
@@ -41,6 +41,23 @@
                 app:layout_constraintVertical_bias="0.131"
                 tools:ignore="MissingConstraints" />
 
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="30dp"
+                android:layout_height="42dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:tint="#FF9800"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_course"
+                app:srcCompat="@drawable/ic_menu_slideshow" />
+
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
