--- a/app/src/main/res/layout/content_note.xml
+++ b/app/src/main/res/layout/content_note.xml
@@ -29,11 +29,11 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:hint="Note title"
+        android:hint="@string/note_tittle_hint"
         android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="@+id/spinner_courses"
         app:layout_constraintRight_toRightOf="@+id/spinner_courses"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_courses"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />
 
     <EditText
         android:id="@+id/text_note_text"
@@ -43,11 +43,11 @@
         android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
         android:ems="10"
-        android:hint="Note text"
+        android:hint="@string/note_text_hint"
         android:inputType="textMultiLine"
         app:layout_constraintLeft_toLeftOf="@+id/text_note_title"
         app:layout_constraintRight_toRightOf="@+id/text_note_title"
-        app:layout_constraintTop_toBottomOf="@+id/text_note_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/text_note_title" />
 
 
 
