--- a/app/src/main/res/layout/item_course_list.xml
+++ b/app/src/main/res/layout/item_course_list.xml
@@ -32,7 +32,7 @@
                 android:layout_marginBottom="8dp"
                 android:gravity="center"
                 android:text="TextView"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/CourseTitle"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -51,7 +51,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:tint="#FF9800"
+                android:tint="@color/PluralSight_Orange"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
