--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -34,7 +34,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textAppearance="@style/CourseTitle"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -66,7 +66,7 @@
                 android:layout_width="23dp"
                 android:layout_height="0dp"
                 android:background="#FCFCFC"
-                android:tint="#FF9800"
+                android:tint="@color/PluralSight_Orange"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/text_tittle"
                 app:layout_constraintStart_toStartOf="parent"
