--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,5 +16,9 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="CourseTitle" parent="@style/TextAppearance.AppCompat.Medium">
+        <item name="android:textColor" >@color/PluralSight_Orange</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
 </resources>
