--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#2196F3</color>
+    <color name="colorPrimary">#1B1A1A</color>
+    <color name="colorPrimaryDark">#222222</color>
+    <color name="colorAccent">@color/PluralSight_Orange</color>
     <color name="PluralSight_Orange">#FF9800</color>
+    <color name="TextColorPrimary">#FFFFFF</color>
+    <color name="hamburgerWhite">#FFFFFF</color>
 </resources>
