--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -44,7 +44,7 @@
                 tools:ignore="MissingConstraints" />
 
             <TextView
-                android:id="@+id/text_tittle"
+                android:id="@+id/text_note_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="70dp"
