Content Provider added

--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -72,7 +72,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_assignment_black_24dp"
-                tools:ignore="VectorDrawableCompat" />
+                tools:ignore="UnknownId,VectorDrawableCompat" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
