--- a/app/src/main/res/menu/menu_note.xml
+++ b/app/src/main/res/menu/menu_note.xml
@@ -20,4 +20,9 @@
         android:orderInCategory="102"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_set_reminder"
+        android:orderInCategory="103"
+        android:title="@string/action_set_reminder"
+        app:showAsAction="never" />
 </menu>
